--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,6 +1,6 @@
 ---
 
-name: Start EC2 Instance with Tag remote:true
+name: Start EC2 Instance with Tag start:true
 
 on:
   workflow_dispatch:  # Cho phép chạy thủ công từ GitHub Actions
